# SAT

./: .dockerignore  .gitignore  CNL_Complete_Command_List.md  CNL_Production_Usage_Analysis.md  Dockerfile  PLAN.md  README.md  REPORT.md  docker-compose.yml  pyproject.toml  test_full_capability.cnl  test_iframe_shadow_dom.cnl  test_saucedemo.cnl
.codacy/: codacy.yaml
config/: default.toml  docker.toml  variables.toml
offline_app/: cloudstreams.html  index.html
offline_app/WmAdmin/: main.fb9ecc00e9ddcbe0.js  polyfills.8654f0d6e17a3f1c.js  runtime.7698f0278fd46206.js  scripts.543b922539e492b8.js  styles.9f340f184d77aa3e.css
sat/: __init__.py  cli.py  config.py  constants.py  logging.py
sat/cnl/: __init__.py  models.py  parser.py  validator.py  variables.py
sat/core/: __init__.py  browser_factory.py  models.py  playwright_manager.py
sat/executor/: __init__.py  action_performer.py  auto_healer.py  cnl_runner.py  executor.py  parallel_executor.py  relative_resolver.py  report.py  strategy_chain.py
sat/executor/strategies/: __init__.py  base.py  embedding_strategy.py  (+3 more)
sat/recorder/: __init__.py  action_builder.py  capture.js  cnl_generator.py  dom_snapshot.py  event_listener.py  navigation_tracker.py  recorder.py  selector_extractor.py
sat/services/: __init__.py  cnl_regenerator.py  dom_parser.py  ocr_service.py  ollama_embedding.py  ollama_vlm.py  selector_merger.py
sat/storage/: __init__.py  test_store.py
sat/web/: __init__.py  app.py
tests/: test_cnl_parser_compat.py  test_ocr_strategy.py  test_relative_parser.py  test_relative_resolver.py
(+16 files in other folders)
