[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sat"
version = "0.1.0"
description = "SAT – Selenium Activity Tool: event-driven recorder & intelligent executor for browser tests"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "ollama>=0.3",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "jinja2>=3.1",
    "Pillow>=10.0",
    "toml>=0.10",
    "aiofiles>=23.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "mypy>=1.10",
]
ocr = [
    "easyocr>=1.7",
    "rapidfuzz>=3.0",
]

[project.scripts]
sat = "sat.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
